packages/build/tests/error/fixtures/fail_plugin/plugin_two.js
export default {
  onPreBuild() {
    console.log('onPreBuild')
  },
  onBuild() {
    console.log('onBuild')
  },
}
